# parallel.datacollector

./: .gitignore  CMakeLists.txt  DepthViewer.cpp  IRViewer.cpp  README.md  T3S.cpp  UVCDepthIRViewer.cpp  UVCDepthIRViewer_DP.cpp  UVCViewer.cpp  config.txt  make.sh
Common/: Render.cpp  Render2.cpp  Utill.cpp
UI/opengl/: Render.cpp  Render.h  Render2.cpp  Render2.h
VCLab/: VCLab_utils.cpp  VCLab_utils.h
cameras/T3S.infiray/include/: SimplePictureProcessing.h  thermometry.h
cameras/a200.imi/include/: ImiCamera.h  ImiCameraPrivate.h  ImiDefines.h  ImiNect.h  ImiSkeleton.h  ImiUpgrade.h
common/include/: Render.h  Utill.h  VCLab_utils.h
common/libs/: Utill.cpp
include/: ImiCameraDefines.h  ImiDefines.h  ImiNect.h  ImiProperties.h  ImiSkeleton.h  ImiUpgrade.h  Render.h  Render2.h  Utill.h  keyboard.hpp
libs/: imi.ini
modules/: a200.hpp
util/: VCLab_utils.cpp  VCLab_utils.h  util.cpp  util.h
